Fix the problem that top area is hidden by nav bar

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -26,3 +26,7 @@
 //
 // Example:
 // @linkColor: #ff0000;
+body { 
+        padding-top: 60px;
+}
+
